[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/sprites/Vaisseau/vaisseau/starship.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://EnemiesPool.gd" type="Script" id=3]
[ext_resource path="res://Floor.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/Vaisseau/vaisseau/starship_super_left.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Vaisseau/vaisseau/starship_firing.png" type="Texture" id=6]
[ext_resource path="res://Stats.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/Vaisseau/vaisseau/starship_super_right.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/Vaisseau/vaisseau/starship_firing_right.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/Vaisseau/vaisseau/starship_super.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/Vaisseau/vaisseau/starship_firing_left.png" type="Texture" id=11]
[ext_resource path="res://Sky.gd" type="Script" id=12]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=13]
[ext_resource path="res://MenuScreen.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/fonts/Pixeled.ttf" type="DynamicFontData" id=15]

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 1024, 0 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "firing",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "firing_super",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 15 )

[node name="GameScene" type="Node2D"]

[node name="Timer" type="Timer" parent="."]

[node name="Sky" type="Area2D" parent="."]
position = Vector2( 1, -100 )
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sky"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="Floor" type="Node2D" parent="."]
position = Vector2( 0, 586 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="FloorArea" type="Area2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/FloorArea"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 480, 544 )
z_index = 1
z_as_relative = false
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerArea2D" type="Area2D" parent="Player"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player/PlayerArea2D"]
frames = SubResource( 4 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerArea2D"]
shape = SubResource( 2 )

[node name="EnemiesPool" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Stats" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="ScoreLabel" type="Label" parent="Stats"]
anchor_right = 0.5
margin_left = 799.0
margin_top = 54.0
margin_right = 1018.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
text = "SCORE : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBar" type="Node2D" parent="Stats"]

[node name="FullBar" type="Polygon2D" parent="Stats/LifeBar"]
position = Vector2( 799, 12 )
polygon = PoolVector2Array( 0, 0, 0, 20, 200, 20, 200, 0 )

[node name="CurrentBar" type="Polygon2D" parent="Stats/LifeBar"]
position = Vector2( 799, 12 )
color = Color( 0, 1, 0, 1 )
polygon = PoolVector2Array( 0, 0, 0, 20, 200, 20, 200, 0 )

[node name="GameOver" parent="." instance=ExtResource( 13 )]
visible = false
z_index = 4096

[node name="MenuScreen" parent="." instance=ExtResource( 14 )]
z_index = 4096

[connection signal="timeout" from="Timer" to="EnemiesPool" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Sky" to="Sky" method="_on_Sky_area_entered"]
[connection signal="area_entered" from="Floor/FloorArea" to="Floor" method="_on_FloorArea_area_entered"]
